# Multi-AI-Business-Consultant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  main.py  orchestrator.py  schemas.py
src/agents/: __init__.py  discovery.py  editor.py  finance.py  market.py  ops.py  risk.py  strategy.py
src/utils/: json_parse.py  kpi.py  llm.py  render.py  stitch.py
templates/: executive_summary.md.j2  financial_model.md.j2  full_report.md.j2  market_competitors.md.j2  plan_30_60_90.md.j2  risks.md.j2  strategy_recommendation.md.j2
